# Shrine

./: .gitmodules  CMakeLists.txt  compile.sh
Sandbox/: CMakeLists.txt  sandbox.cpp
Shrine/: CMakeLists.txt
Shrine/include/: entry.h  shrine.h  shrine_pch.h
Shrine/include/Engine/: application.h  core.h  layer.h  layer_queue.h  memory.h  window.h
Shrine/include/Engine/Common/: application.h  assert.h  common_definitions.h  window.h
Shrine/include/Engine/Event/: event.h  event_bus.h  event_handler.h  event_listener.h  input_events.h  key_pressed_event.h  key_released_event.h  key_repeated_event.h  window_events.h
Shrine/include/Engine/Graphics/: layer.h  layer_queue.h  renderer.h  scene.h
Shrine/include/Engine/Renderer/: layer_queue.h  renderer.h  scene.h
Shrine/include/Engine/Utility/: keyboard.h  logger.h  pointer.h
Shrine/src/Engine/: application.cpp  layer_queue.cpp  window.cpp
Shrine/src/Engine/Common/: application.cpp  window.cpp
Shrine/src/Engine/Event/: event.cpp  event_handler.cpp  event_listener.cpp  input_events.cpp  key_pressed_event.cpp  key_released_event.cpp  key_repeated_event.cpp  window_events.cpp
Shrine/src/Engine/Graphics/: layer_queue.cpp
Shrine/src/Engine/Renderer/: layer_queue.cpp  renderer.cpp
Shrine/src/Engine/Utility/: logger.cpp
ShrineCore/: CMakeLists.txt
ShrineCore/include/: entry.h  shrine.h  shrine_events.h  shrine_pch.h
ShrineCore/include/Engine/Common/: application.h  common_definitions.h  input_queries.h  logger.h  memory.h  window.h
ShrineCore/include/Engine/Event/: event.h  event_bus.h  input_events.h  window_events.h
ShrineCore/include/Engine/Graphics/: layer.h  layer_queue.h
ShrineCore/include/Engine/Utility/: keyboard.h
ShrineCore/src/Engine/Common/: application.cpp  input_queries.cpp  logger.cpp  window.cpp
ShrineCore/src/Engine/Event/: input_events.cpp
ShrineCore/src/Engine/Graphics/: layer.cpp  renderer.cpp
